--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^7.2.1",
     "braces": "^2.3.1",
-    "eslint": "^4.18.2",
+    "eslint": "^8.9.0",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.21",
     "mem": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "1.1.4",
-    "webpack-dev-server": "^3.1.11"
+    "react-scripts": "^5.0.0",
+    "webpack-dev-server": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,8 +29,15 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [ ">0.2%", "not op_mini all" ],
-    "development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+    "production": [
+      ">0.2%",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
